--- a/lyx/slides_30min.lyx
+++ b/lyx/slides_30min.lyx
@@ -81,7 +81,7 @@ Internal Migration and Homeownership
 \end_layout
 
 \begin_layout Author
-Florian Oswald
+Florian Oswald (UCL)
 \begin_inset Newline newline
 \end_inset
 
@@ -98,7 +98,7 @@ vspace{10pt}
 
 \end_inset
 
-Yale Prospectus Seminar
+RHUL PhD Conference 2014
 \end_layout
 
 \begin_layout BeginFrame
@@ -250,21 +250,24 @@ Estimate parameters on micro panel data
 \end_layout
 
 \begin_layout Itemize
-Can be used to simulate responses of labor mobility to different housing
- policies
+Output:
 \end_layout
 
-\begin_layout BeginFrame
-Annual Interstate Migration Rate
+\begin_deeper
+\begin_layout Itemize
+Simulate responses of labor mobility to different housing policies
 \end_layout
 
 \begin_layout Itemize
-CPS question: Have you moved in the last year?
+Evaluate welfare implications of those policies
+\end_layout
+
+\end_deeper
+\begin_layout BeginFrame
+US Migration Rates: How many people moved?
 \end_layout
 
 \begin_layout Standard
-\noindent
-\align center
 \begin_inset Float table
 wide false
 sideways false
@@ -273,17 +276,216 @@ status open
 \begin_layout Plain Layout
 \noindent
 \align center
-\begin_inset ERT
-status open
+\begin_inset Tabular
+<lyxtabular version="3" rows="7" columns="3">
+<features tabularvalignment="middle">
+<column alignment="center" valignment="top" width="0">
+<column alignment="center" valignment="top" width="0">
+<column alignment="center" valignment="top" width="0">
+<row>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Period
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Across 
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+% of US population
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Annual
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+county
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+5
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" leftline="true" usebox="none">
+\begin_inset Text
 
 \begin_layout Plain Layout
 
-
-\backslash
-input{
-\backslash
-Dropbox/data/CPS/mv3_2013-edit.tex}
 \end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+state
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+2
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+region
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+1.5
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+5-year
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+county
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+18.6
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+state
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+8.9
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+region
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" bottomline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+4.8
+\end_layout
+
+\end_inset
+</cell>
+</row>
+</lyxtabular>
 
 \end_inset
 
@@ -294,7 +496,9 @@ Dropbox/data/CPS/mv3_2013-edit.tex}
 \begin_inset Caption
 
 \begin_layout Plain Layout
-CPS 2013 march supplement
+Source Molloy et al, J.
+ of Economic Perspectives (2011).
+ 
 \end_layout
 
 \end_inset
@@ -305,6 +509,22 @@ CPS 2013 march supplement
 \end_inset
 
 
+\end_layout
+
+\begin_layout Itemize
+annual moving rate at county level 
+\begin_inset Formula $\approx\frac{1}{3}$
+\end_inset
+
+ of annual flows into or out of employment (Fallick and Fleischmann 2004)
+\end_layout
+
+\begin_layout Itemize
+regional rate 
+\begin_inset Formula $\approx\frac{1}{10}$
+\end_inset
+
+ of annual flows in/out of labor force
 \end_layout
 
 \begin_layout BeginFrame
@@ -578,12 +798,12 @@ Location is a triple
 \end_layout
 
 \begin_layout Itemize
-Agents know the stochastic process driving 
+Agents observe local 
 \begin_inset Formula $p_{jt},\overline{y}_{jt}$
 \end_inset
 
- is a VAR(1) denoted 
-\begin_inset Formula $\mathbf{P}_{t}$
+ and know law of motion is a VAR(1) denoted 
+\begin_inset Formula $\mathbf{P}_{jt}$
 \end_inset
 
 
@@ -960,7 +1180,7 @@ Budget Constraint
 \begin_inset Formula 
 \begin{eqnarray*}
 a_{t+1} & = & a_{t}(1+r(a_{t}))+y_{t}-c_{t}-\pi(h_{t-1},h_{t},\mathbf{p}_{t})\\
-\onslide+<2-> r(a_{t}) & = & \begin{cases}
+\onslide+<2->r(a_{t}) & = & \begin{cases}
 r & \text{if }a_{t}\geq0\\
 r^{m} & \text{if }a_{t}<0
 \end{cases},r^{m}>r\\
